--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.5.2",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
+    "framer-motion": "^12.6.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "mongodb": "^6.14.2",
